--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest run",
+        "test:watch": "vitest"
     },
     "dependencies": {
         "pixi.js": "^8.1.5"
     },
     "devDependencies": {
         "typescript": "^5.4.0",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "vitest": "^1.6.0",
+        "@types/node": "^20.11.0"
     },
     "license": "MIT"
 }
