--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "types": [
-            "vite/client"
+            "vite/client",
+            "vitest"
         ],
         "outDir": "dist"
     },
